Add KNN imputer for missing value handling in the Titanic dataset

--- a/Machine Learning/Data Pre Processing/MissingValues.ipynb
+++ b/Machine Learning/Data Pre Processing/MissingValues.ipynb
@@ -1449,12 +1449,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "33ffbae5",
+   "metadata": {},
+   "source": [
+    "## Using KNN imputer"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "28c54477",
+   "execution_count": 50,
+   "id": "f495b7c5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.impute import KNNImputer\n",
+    "\n",
+    "# Create a KNNImputer object\n",
+    "knn_imputer = KNNImputer(n_neighbors=5)\n",
+    "# Impute missing values in the 'age' column using KNN\n",
+    "df['age'] = knn_imputer.fit_transform(df[['age']])  # Impute missing values in the 'age' column"
+   ]
   }
  ],
  "metadata": {
